[package]
name = "excopr"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"
keywords = ["configuration", "argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "Extensible Configuration Processor"
readme = "README.md"

[dependencies]

[dev-dependencies]
excopr-tests = { path = "../excopr-tests" }
